# ml_engineering_projects

./: .gitignore  README.md
1_docker_beginner/: README.md
1_docker_beginner/example_1_imdb/: Dockerfile  main.py
1_docker_beginner/example_2_webapp_fastapi/: Dockerfile  requirements.txt
1_docker_beginner/example_2_webapp_fastapi/app/: main.py
2_mlapp_with_docker_flask/: README.md
2_mlapp_with_docker_flask/app/api/: Dockerfile  app.py  docker-compose.yml  requirements.txt  text_preprocessing.py  utilities.py
2_mlapp_with_docker_flask/app/api/models/: model.pkl
2_mlapp_with_docker_flask/ml-algo-dev/: news_classification.ipynb
2_mlapp_with_docker_flask/ml-algo-dev/data/: bbc_news_test.csv  bbc_news_train_val.csv
3_mlapp_microservice_on_kubernetes/: Dockerfile  README.md  app.py  label_mappings.json  model.pkl  pyproject.toml  train.py
3_mlapp_microservice_on_kubernetes/data/: salary.csv
3_mlapp_microservice_on_kubernetes/templates/: index.html  result.html
